src/main/java/com/example/kaboocampostproject/global/error/GeneralErrorCode.java
package com.example.kaboocampostproject.global.error;


import lombok.AllArgsConstructor;
import lombok.Getter;
import org.springframework.http.HttpStatus;

@Getter
@AllArgsConstructor
public enum GeneralErrorCode implements BaseErrorCode {
    // 유효성 검사
    VALIDATION_FAILED(HttpStatus.BAD_REQUEST, "VALID400_0", "잘못된 파라미터 입니다.");
    ;
    private HttpStatus httpStatus;
    private String code;
    private String message;
}
